# sm_backend

./: Makefile  README.md  SM_Backend.postman_collection.json  default.env  docker-compose.yml  dump.sql  pyproject.toml
src/: manage.py
src/account/: urls.py
src/app/: asgi.py  urls.py  wsgi.py
src/app/conf/: apps.py  core.py  database.py
src/tasks/: admin.py  models.py  urls.py
src/tasks/api/: serializers.py  views.py
src/tasks/management/commands/: resource_allocation.py
src/tasks/migrations/: 0001_initial.py
src/tasks/services/: resource_allocation.py
