[tool.poetry]
name = "sm-backend"
version = "0.1.0"
description = ""
authors = ["Artem Svistelnik <artem.svistelnik@gmail.com>"]
readme = "README.md"
packages = [{include = "sm_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
black = "^24.4.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
